# bsu_schedule_bot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bot_handler.cpp  bot_handler.h  env_loader.cpp  env_loader.h  schedule_parser.h  test.html  test3.html
src/: bot_handler.cpp  bot_handler.h  env_loader.cpp  env_loader.h  main.cpp  schedule_parser.cpp  schedule_parser.h
